// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search> renders with isLoading=false 1`] = `
<div
  className="search"
>
  <input
    aria-label="Searchfield for fiiltering food products"
    className="search__input"
    onKeyDown={[Function]}
    placeholder="e.g. ice cream"
    type="text"
  />
  <Button
    aria-label="Searchbutton for filtering food products"
    className="search__button"
    iconName="search"
    iconSize="l"
    isLoading={false}
    onClick={[Function]}
  />
</div>
`;

exports[`<Search> renders with isLoading=true 1`] = `
<div
  className="search"
>
  <input
    aria-label="Searchfield for fiiltering food products"
    className="search__input"
    onKeyDown={[Function]}
    placeholder="e.g. ice cream"
    type="text"
  />
  <Button
    aria-label="Searchbutton for filtering food products"
    className="search__button"
    iconName="search"
    iconSize="l"
    isLoading={true}
    onClick={[Function]}
  />
</div>
`;
